Panel: Set max-height for closed panel. Fixes #5843 - Page div gets a vertical scrollbar on IE9 if panel is longer than page content.

--- a/css/structure/jquery.mobile.panel.css
+++ b/css/structure/jquery.mobile.panel.css
@@ -2,6 +2,7 @@
 .ui-panel {
 	width: 17em;
 	min-height: 100%;
+	max-height: none;
 	border-width: 0;
 	position: absolute;
 	top: 0;
@@ -9,6 +10,7 @@
 }
 .ui-panel-closed {
 	width: 0;
+	max-height: 100%;
 	overflow: hidden;
 	visibility: hidden;
 }
